2008-05-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.c (Init_clutter): Added calls to
	rbclt_callback_func_init and rbclt_frame_source_init.

	* clutter/rbcltframesource.c: Added a binding for
	clutter_frame_source_add.

	* clutter/extconf.rb: Added rbcltcallbackfunc.o and
	rbcltframesource.o

	* clutter/rbcltalphafunc.c: 
	* clutter/rbcltcallbackfunc.h: 
	* clutter/rbcltcallbackfunc.c: Moved the callback wrapper code
	from rbcltalphafunc.c to a separate file so that it can be used by
	the frame source as well.

2008-05-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltevent.c.in: 
	* clutter/mkrbcltevent.rb: The root 'Event' class is now created
	in mkrbcltevent.rb because it now has a lot of fields so the
	getters and setters are created automatically. The common fields
	from the other classes (such as 'time') have been removed. All
	classes have been updated to version 0.7

2008-05-24  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltentry.c (rbclt_entry_handle_key_event): Removed as
	the method is now deprecated.
	(rbclt_entry_insert_text, rbclt_entry_set_position): Use renamed
	cursor position functions.
	(rbclt_entry_init): Add aliases for the position property methods
	so the new 'cursor_position' names can be used.

2008-05-24  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclteffect.c (rbclt_effect_template_initialize): Can
	now accept an integer for the first argument to create a timeline
	for that duration.
	(rbclt_effect_fade, rbclt_effect_depth, rbclt_effect_move)
	(rbclt_effect_do_path, rbclt_effect_rotate): Tidied up indentation
	(rbclt_effect_scale): Fixed the third parameter which should be
	the y-scale end instead of the gravity.
	(rbclt_effect_rotate, rbclt_effect_set_timeline_clone)
	(rbclt_effect_init): Added a getter and setter for the 'clone'
	property. This can be created automatically because there is
	already a 'clone' method in Object.

2008-05-23  Neil Roberts  <neil@o-hand.com>
