@@ -1,5 +1,5 @@
 /* Ruby bindings for the Clutter 'interactive canvas' library.
- * Copyright (C) 2007  Neil Roberts
+ * Copyright (C) 2007-2008  Neil Roberts
  * 
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -31,14 +31,6 @@ rbclt_group_initialize (VALUE self)
 }
 
 static VALUE
-rbclt_group_find_child_by_id (VALUE self, VALUE id)
-{
-  ClutterGroup *group = CLUTTER_GROUP (RVAL2GOBJ (self));
-  ClutterActor *child = clutter_group_find_child_by_id (group, NUM2UINT (id));
-  return child ? GOBJ2RVAL (child) : Qnil;
-}
-
-static VALUE
 rbclt_group_get_nth_child (VALUE self, VALUE n)
 {
   ClutterGroup *group = CLUTTER_GROUP (RVAL2GOBJ (self));
@@ -61,69 +53,13 @@ rbclt_group_remove_all (VALUE self)
   return self;
 }
 
-static VALUE
-rbclt_group_raise (int argc, VALUE *argv, VALUE self)
-{
-  VALUE actor_arg, sibling_arg;
-  ClutterGroup *group;
-  ClutterActor *actor, *sibling;
-
-  /* If the sibling argument isn't given then call the one-argument
-     raise method from ClutterActor instead */
-  if (argc == 1)
-    return rb_call_super (1, argv);
-
-  rb_scan_args (argc, argv, "2", &actor_arg, &sibling_arg);
-  group = CLUTTER_GROUP (RVAL2GOBJ (self));
-  actor = CLUTTER_ACTOR (RVAL2GOBJ (actor_arg));
-  sibling = CLUTTER_ACTOR (RVAL2GOBJ (sibling_arg));
-
-  clutter_group_raise (group, actor, sibling);
-
-  return self;
-}
-
-static VALUE
-rbclt_group_lower (int argc, VALUE *argv, VALUE self)
-{
-  VALUE actor_arg, sibling_arg;
-  ClutterGroup *group;
-  ClutterActor *actor, *sibling;
-
-  /* If the sibling argument isn't given then call the one-argument
-     lower method from ClutterActor instead */
-  if (argc == 1)
-    return rb_call_super (1, argv);
-
-  rb_scan_args (argc, argv, "2", &actor_arg, &sibling_arg);
-  group = CLUTTER_GROUP (RVAL2GOBJ (self));
-  actor = CLUTTER_ACTOR (RVAL2GOBJ (actor_arg));
-  sibling = CLUTTER_ACTOR (RVAL2GOBJ (sibling_arg));
-
-  clutter_group_lower (group, actor, sibling);
-
-  return self;
-}
-
-static VALUE
-rbclt_group_sort_depth_order (VALUE self)
-{
-  ClutterGroup *group = CLUTTER_GROUP (RVAL2GOBJ (self));
-  clutter_group_sort_depth_order (group);
-  return self;
-}
-
 void
 rbclt_group_init ()
 {
   VALUE klass = G_DEF_CLASS (CLUTTER_TYPE_GROUP, "Group", rbclt_c_clutter);
 
   rb_define_method (klass, "initialize", rbclt_group_initialize, 0);
-  rb_define_method (klass, "find_child_by_id", rbclt_group_find_child_by_id, 1);
   rb_define_method (klass, "[]", rbclt_group_get_nth_child, 1);
   rb_define_method (klass, "n_children", rbclt_group_n_children, 0);
   rb_define_method (klass, "remove_all", rbclt_group_remove_all, 0);
-  rb_define_method (klass, "raise", rbclt_group_raise, -1);
-  rb_define_method (klass, "lower", rbclt_group_lower, -1);
-  rb_define_method (klass, "sort_depth_order", rbclt_group_sort_depth_order, 0);
 }
